# user-management-service

./: .bandit  .coveragerc  .dockerignore  .env.example  .gitignore  .golangci.yml  .markdownlint.yml  .markdownlintignore  .pre-commit-config.yaml  .shellcheckrc  .yamllint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  Makefile  README.md  docker-compose.yml  go.mod  go.sum  lint_output.txt  pyproject.toml  pytest.ini  setup.cfg
.beads/: metadata.json
.cursor/: README.md
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  SUPPORT.md  dependabot.yml  labeler.yml  labels.yml  pull_request_template.md  release-drafter.yml  renovate.json5  stale.yml
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-and-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.yml  feature_request.md  feature_request.yml  performance_issue.yml  security_vulnerability.yml  task.yml
.github/PULL_REQUEST_TEMPLATE/: auto_populated_pr.md  pull_request_template.md
.github/workflows/: ci.yml  cleanup.yml  codeql.yml  coverage.yml  dependabot-auto-merge.yml  deploy.yml  greet.yml  license-check.yml  links.yml  lock.yml  pr-labeler.yml  pr-size.yml  release.yml  secrets-scan.yml  security.yml  stale.yml
app/: __init__.py  main.py
app/api/v1/: __init__.py
app/api/v1/routes/: __init__.py  admin.py  auth.py  health.py  (+4 more)
app/clients/: __init__.py  base_oauth2_service_client.py  constants.py  notification_client.py  oauth2_token_manager.py
app/core/: __init__.py  config.py  logging.py  oauth2_client.py
app/db/: __init__.py  database_manager.py  database_reconnection.py  database_session.py
app/db/models/: base_database_model.py
app/db/redis/: __init__.py  redis_database_manager.py  redis_database_session.py
app/db/sql/: __init__.py  sql_database_manager.py  sql_database_session.py
app/enums/: __init__.py  difficulty_level_enum.py  environment_enum.py  health_status.py  token_type.py  user_role.py  user_role_enum.py
app/enums/preferences/: __init__.py  color_scheme_enum.py  font_size_enum.py  language_enum.py  layout_density_enum.py  profile_visibility_enum.py  theme_enum.py  types.py
app/exceptions/: handlers.py
app/exceptions/custom_exceptions/: __init__.py  database_exceptions.py
app/middleware/: __init__.py  auth_middleware.py  performance_middleware.py  request_id_middleware.py  security_middleware.py
app/services/: __init__.py  admin_service.py  auth_service.py  cache_service.py  health_service.py  notification_service.py  session_service.py  social_service.py  user_service.py
app/utils/: __init__.py  constants.py  preference_utils.py  privacy.py  security.py
cmd/api/: main.go  main_test.go
config/: cors.yaml  database.yaml  downstreamServices.development.yaml  downstreamServices.production.yaml  downstreamServices.yaml  logging.json  logging.yaml  oauth2.json  oauth2.yaml  server.yaml
docs/: API.md  DEVELOPMENT.md  openapi.yaml
docs/oauth2/: INTEGRATION.md  SCOPES.md
internal/app/: container.go
internal/config/: config.go  config_test.go
internal/database/: database.go  database_test.go
internal/dto/: dto.go  preferences.go  requests.go  responses.go  user.go
internal/handler/: admin.go  bind.go  health.go  health_test.go  metrics.go  notification.go  notification_test.go  preference.go  response.go  social.go  social_test.go  test_helpers_test.go  user.go  user_test.go
internal/logger/: logger.go  logger_test.go
internal/metrics/: metrics.go
internal/middleware/: auth.go  auth_test.go  context.go  context_test.go  logger.go  metrics.go  middleware_test.go
internal/notification/: client.go  client_test.go  notification.go  notification_test.go  types.go
internal/oauth2/: client.go  client_test.go  jwt.go  jwt_test.go  token_manager.go  token_manager_test.go  types.go
internal/redis/: redis.go  redis_test.go
internal/repository/: interfaces.go  notification_repository.go  notification_repository_test.go  preference_repository.go  social_repository.go  social_repository_test.go  user_repository.go  user_repository_test.go
internal/server/: routes.go  server.go  server_test.go
internal/service/: admin_service.go  admin_service_test.go  health.go  health_test.go  interfaces.go  metrics_service.go  metrics_service_test.go  notification_service.go  notification_service_test.go  preference_service.go  social_service.go  social_service_test.go  user_service.go  user_service_test.go
internal/validation/: validator.go  validator_test.go
k8s/: configmap-template.yaml  deployment.yaml  gateway-route.yaml  ingress.yaml  namespace.yaml  network-policy.yaml  pod-disruption-budget.yaml  secret-template.yaml  service.yaml
postman/: README.md  User-Management-API.postman_collection.json  User-Management-Development.postman_environment.json  User-Management-Local.postman_environment.json
scripts/containerManagement/: cleanup-container.sh  deploy-container.sh  get-container-status.sh  start-container.sh  stop-container.sh  update-container.sh
scripts/container_management/: README.md  __init__.py  cleanup_container.py  deploy_container.py  get_container_status.py  minikube_utils.py  start_container.py  stop_container.py
scripts/shell/: cleanup-container.sh  deploy-container.sh  get-container-status.sh  start-container.sh  stop-container.sh  update-container.sh
scripts/sql/: init.sql
tests/: __init__.py  conftest.py
tests/component/: admin_clear_cache_test.go  admin_test.go  auth_middleware_test.go  health_test.go  metrics_test.go  notification_test.go  setup_test.go  social_test.go  user_test.go
tests/dependency/: admin_test.go  health_test.go  metrics_test.go  notification_test.go  setup_test.go  social_service_test.go  user_service_test.go
tests/http/: admin.http  auth.http  health.http  notifications.http  social.http  users.http
tests/performance/: admin_benchmark_test.go  health_benchmark_test.go  metrics_benchmark_test.go  notification_benchmark_test.go  setup_test.go  social_service_benchmark_test.go  user_service_benchmark_test.go
(+123 files in other folders)
