[tool.poetry]
name = "user-management-service"
version = "0.1.0"
description = "A user management service for the recipe web app."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.2"
mypy = "^1.16.1"
pre-commit = "^4.2.0"
yamllint = "^1.37.1"
prettier = "^0.0.7"
pydocstyle = "^6.3.0"
isort = "^6.0.1"
bandit = "^1.8.5"
vulture = "^2.14"
coverage = "^7.9.2"
commitlint = "^1.3.0"
tomli = "^2.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "A", "C4", "T20", "PT", "SIM", "ARG", "DTZ", "PIE", "Q", "RSE", "RET", "SLF", "TCH", "PTH", "ERA", "PL", "TRY", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
show_error_codes = true
pretty = true

[tool.isort]
profile = "black"
line_length = 88

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B404", "B603", "B607"]

[tool.vulture]
min_confidence = 80
exclude = ["tests"]

[tool.coverage.run]
omit = ["tests/*", "config/*"]

[tool.coverage.report]
show_missing = true
fail_under = 90
