[tool.poetry]
name = "user-management-service"
version = "0.1.0"
description = "A user management service for the recipe web app."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.14"
uvicorn = "^0.35.0"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.2"
mypy = "^1.16.1"
pre-commit = "^4.2.0"
yamllint = "^1.37.1"
prettier = "^0.0.7"
pydocstyle = "^6.3.0"
isort = "^6.0.1"
bandit = "^1.8.5"
vulture = "^2.14"
coverage = "^7.9.2"
commitlint = "^1.3.0"
tomli = "^2.2.1"
flake8 = "^7.0.0"
types-requests = "^2.31.0"
types-PyYAML = "^6.0.0"
kubernetes = "^33.1.0"
rich = "^14.0.0"
click = "^8.2.1"
python-dotenv = "^1.1.1"
docformatter = "^1.7.5"

[tool.poetry.scripts]
app-local = "app.main:main"
container-deploy = "scripts.containerManagement.deploy_container:main"
container-status = "scripts.containerManagement.get_container_status:main"
container-start = "scripts.containerManagement.start_container:main"
container-stop = "scripts.containerManagement.stop_container:main"
container-cleanup = "scripts.containerManagement.cleanup_container:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20", "PT", "SIM", "ARG", "DTZ", "PIE", "Q", "RSE", "RET", "SLF", "TCH", "PTH", "ERA", "PL", "TRY", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
show_error_codes = true
pretty = true

[tool.isort]
profile = "black"
line_length = 88

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B404", "B603", "B607"]

[tool.vulture]
min_confidence = 80
exclude = ["tests"]

[tool.coverage.run]
omit = ["tests/*", "config/*"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.docformatter]
wrap_summaries = 88
wrap_descriptions = 88
pre_summary_newline = false
make_summary_multi_line = false
force_wrap = false
