[tool.poetry]
name = "user-management-service"
version = "0.1.0"
description = "A user management service for the recipe web app."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.118.2"
uvicorn = "^0.37.0"
pydantic = "^2.12.0"
pydantic-settings = "^2.11.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
asyncpg = "^0.30.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.43"}
email-validator = "^2.3.0"
redis = "^6.4.0"
psutil = "^5.9.0"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
ruff = "^0.14.0"
mypy = "^1.18.2"
pre-commit = "^4.3.0"
yamllint = "^1.37.1"
prettier = "^0.0.7"
pydocstyle = "^6.3.0"
isort = "^6.1.0"
bandit = "^1.8.6"
vulture = "^2.14"
coverage = "^7.10.7"
commitlint = "^1.3.1"
safety = "^3.2.4"
tomli = "^2.3.0"
flake8 = "^7.0.0"
types-requests = "^2.32.4"
types-PyYAML = "^6.0.12"
kubernetes = "^34.1.0"
rich = "^14.1.0"
click = "^8.3.0"
docformatter = "^1.7.5"
kubernetes-typed = "^18.20.2"
docker = "^7.1.0"
pydantic-settings = {extras = ["all"], version = "^2.11.0"}
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
refurb = "^2.2.0"
types-redis = "^4.6.0.20241004"

[tool.poetry.scripts]
app-local = "app.main:main"
container-deploy = "scripts.container_management.deploy_container:main"
container-status = "scripts.container_management.get_container_status:main"
container-start = "scripts.container_management.start_container:main"
container-stop = "scripts.container_management.stop_container:main"
container-cleanup = "scripts.container_management.cleanup_container:main"
test = "scripts.container_management.test:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20", "PT", "SIM", "ARG", "DTZ", "PIE", "Q", "RSE", "RET", "SLF", "TCH", "PTH", "ERA", "PL", "TRY", "RUF"]
ignore = ["TRY003", "W291", "W292", "W293", "RUF005"]  # Let black handle whitespace formatting, allow __all__ concatenation

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
show_error_codes = true
pretty = true
disallow_any_generics = false
warn_return_any = false

[tool.isort]
profile = "black"
line_length = 88

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B404", "B603", "B607"]

[tool.vulture]
min_confidence = 80
exclude = ["tests", "*cls*"]

[tool.coverage.run]
omit = ["tests/*", "config/*"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.docformatter]
wrap_summaries = 88
wrap_descriptions = 88
pre_summary_newline = false
make_summary_multi_line = false
force_wrap = false
